Resolve #17 by setting entire header as overflow auto on desktop

--- a/src/script/entries/demo/demo.scss
+++ b/src/script/entries/demo/demo.scss
@@ -21,6 +21,10 @@ $brand-color: rgba(123, 123, 432, .5);
   @media(min-width: 960px) {
     position: fixed;
     width: 270px;
+    top: 0;
+    bottom: 0;
+    padding: 20px 0;
+    overflow: auto;
   }
 }
 
